// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`abbreviation > should log resolved tasks only > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/main/nadle.config.ts</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[log] Resolved tasks:
    <Yellow><Bold>hell</BoldDim></Yellow>  → <Green><Bold>hello</BoldDim></Green>
    <Yellow><Bold>cop </BoldDim></Yellow>  → <Green><Bold>copy</BoldDim></Green>

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> started

Hello from nadle!
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> done in {duration}
[log] <Yellow>></Yellow> Task <Bold>goodbye</BoldDim> started

Goodbye, tak!
[log] 
<Green>✓</Green> Task <Bold>goodbye</BoldDim> done in {duration}
[log] <Yellow>></Yellow> Task <Bold>prepare</BoldDim> started

Preparing...
[log] 
<Green>✓</Green> Task <Bold>prepare</BoldDim> done in {duration}
[log] <Yellow>></Yellow> Task <Bold>copy</BoldDim> started

Copying from assets/ to dist/
[log] 
<Green>✓</Green> Task <Bold>copy</BoldDim> done in {duration}
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>4</BoldDim><Dim> tasks executed)</BoldDim>
`;

exports[`abbreviation > should resolve abbr task properly > stdout 1`] = `
[log] <Bold><Cyan>🛠️ Welcome to Nadle {version}!</Cyan></BoldDim>
[log] <Dim>Loading configuration file from: /ROOT/test/__fixtures__/main/nadle.config.ts</BoldDim>
[log] <Dim>Using 1 worker for task execution</BoldDim>
[log] Resolved tasks:
    <Yellow><Bold>hell</BoldDim></Yellow>  → <Green><Bold>hello</BoldDim></Green>

[log] <Yellow>></Yellow> Task <Bold>hello</BoldDim> started

Hello from nadle!
[log] 
<Green>✓</Green> Task <Bold>hello</BoldDim> done in {duration}
[log] 
<Bold><Green>RUN SUCCESSFUL</Green></BoldDim> in <Bold>{duration}</BoldDim> <Dim>(<Bold>1</BoldDim><Dim> task executed)</BoldDim>
`;
